<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	<ScrollView 
        android:layout_width="match_parent"
        android:layout_height="match_parent">
  <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >   
	<View android:id="@+id/strut"
        android:layout_width="0dp"
        android:layout_height="0dp" 
        android:layout_centerHorizontal="true"/>
    <RelativeLayout
        android:id="@+id/leftCol"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignRight="@id/strut"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical" >
        
<!--         <TextView 
       	    android:layout_width="match_parent"
       	    android:layout_height="match_parent"
       	    android:background="#BCBCBC"/>  -->
       	    
        	<TextView
       	    android:id="@+id/measurement_title"
       	    android:layout_width="wrap_content"
       	    android:layout_height="wrap_content"
       	    android:text="@string/measurement_title"
       	    android:textSize="32sp" 
       	    android:textAppearance="?android:attr/textAppearanceLarge"
       	    />
       	<LinearLayout
       	    android:layout_width="480dp"
       	    android:layout_height="match_parent"
       	    android:orientation="vertical"
       	    android:layout_below="@+id/measurement_title"
       	    android:layout_marginTop="20dp"
       	    android:showDividers="middle"
       	    android:divider="@drawable/empty_divider">
			<RelativeLayout
       	   		android:layout_width="match_parent"
       	   		android:layout_height="wrap_content"
       	   		android:orientation="horizontal"
	       	    >
	       	    <TextView
				    android:id="@+id/jobNumberTitle"
				    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:text="@string/jobNumber_title"
		       	    android:textSize="20sp" 
				    />
	       	    <EditText
	                android:id="@+id/editJobNumber"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:width="230dp" 
	                android:hint="Enter Job No."
                	/>
	       	</RelativeLayout>
			<RelativeLayout
       	   		android:layout_width="match_parent"
       	   		android:layout_height="wrap_content"
       	   		android:orientation="horizontal"
	       	    >			
				<TextView
				    android:id="@+id/substationTitle"
				    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:text="@string/substation_title"
		       	    android:textSize="20sp" 
				    />
				<Spinner
	                android:id="@+id/substation"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"	                
	                android:layout_marginLeft="5dp"
	                android:width="230dp" 
	                />
			</RelativeLayout>
			<RelativeLayout
       	   		android:layout_width="match_parent"
       	   		android:layout_height="wrap_content"
       	   		android:orientation="horizontal"
	       	    >				
				<TextView
				    android:id="@+id/levelVoltageTitle"
				    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:text="@string/levelVoltage_title"
		       	    android:textSize="20sp" 
				    />
				<Spinner
	                android:id="@+id/levelVoltage"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"	                
	                android:layout_marginLeft="5dp"
	                android:width="230dp" 
	                />
			</RelativeLayout>
			<RelativeLayout
       	   		android:layout_width="match_parent"
       	   		android:layout_height="wrap_content"
       	   		android:orientation="horizontal"
	       	    >				
				<TextView
				    android:id="@+id/ratedTitle"
				    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:text="@string/rated_title"
		       	    android:textSize="20sp" 
				    />
				<Spinner
	                android:id="@+id/rated"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"	                
	                android:layout_marginLeft="5dp"
	                android:width="230dp" 
	                />
			</RelativeLayout>				
			<RelativeLayout
       	   		android:layout_width="match_parent"
       	   		android:layout_height="wrap_content"
       	   		android:orientation="horizontal"
	       	    >					
				<TextView
				    android:id="@+id/capacitorSerialNumberTitle"
				    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:text="@string/capacitorSerialNumber_title"
		       	    android:textSize="20sp" 
				    />
	            <EditText
	                android:id="@+id/editCapSerialNo"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"	                
	                android:layout_marginLeft="5dp"
	                android:width="230dp" 
	                android:hint="Enter Capacitor Serial No."
	                />				
			</RelativeLayout>	
			<RelativeLayout
       	   		android:layout_width="match_parent"
       	   		android:layout_height="wrap_content"
       	   		android:orientation="horizontal"
	       	    >				
				<TextView
				    android:id="@+id/aliasTitle"
				    android:layout_width="wrap_content"
		       	    android:layout_height="wrap_content"
		       	    android:text="@string/alias_title"
		       	    android:textSize="20sp" 
				    />
	            <EditText
	                android:id="@+id/editAlias"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"		                
	                android:layout_marginLeft="5dp"
	                android:width="230dp"
	                android:hint="Also Known As" 
	                />				
			</RelativeLayout>					
		</LinearLayout>
    </RelativeLayout>
    
    
    
    <RelativeLayout
        android:id="@+id/rightCol"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_alignLeft="@id/strut"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"

        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical" >
            
<!--         <TextView 
       	    android:layout_width="match_parent"
       	    android:layout_height="match_parent"
       	    android:background="#ABABAB"/> -->
       	<LinearLayout
       	    android:id="@+id/measuring_show"
       	    android:layout_width="480dp"
       	    android:layout_height="wrap_content"
       	    android:orientation="vertical"
       	    android:layout_marginTop="20dp"
       	    android:showDividers="middle"
       	    android:divider="@drawable/empty_divider">        
			<RelativeLayout
	       	   	android:layout_width="wrap_content"
	       	   	android:layout_height="wrap_content"
	       	   	android:orientation="horizontal"
		       	>	
		        <TextView
		            android:id="@+id/conStatusTitle"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:textSize="20sp"
		            android:text="Measuring Unit Connection Status: " />
		
		        <TextView
		            android:id="@+id/conStatus"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_toRightOf="@+id/conStatusTitle"
		            android:textSize="20sp"
		            android:text="init" />
				<Button
				    android:id="@+id/emergencyButton"
				    android:layout_width="wrap_content"
				    android:layout_height="32dp"
				    android:layout_alignParentRight="true"
				    android:background="#FF0000"
				    android:layout_marginTop="10dp"
				    android:textColor="#FFFFFF"
				    android:text="STOP"
				    android:textStyle="bold"/>		        
	        </RelativeLayout>
			<RelativeLayout
	       	   	android:layout_width="wrap_content"
	       	   	android:layout_height="wrap_content"
	       	   	android:orientation="horizontal"
		       	>	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Measuring Voltage: "
	                android:textSize="20sp" />
	
	            <TextView
	                android:id="@+id/measuringVoltage"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="init"
	                android:textSize="20sp" />
	        </RelativeLayout>	
	        <RelativeLayout
	       	   	android:layout_width="wrap_content"
	       	   	android:layout_height="wrap_content"
	       	   	android:orientation="horizontal"
		       	>	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Frequency: "
	                android:textSize="20sp" />
	
	            <TextView
	                android:id="@+id/measuringFrequency"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="init"
	                android:textSize="20sp" />	            
	        </RelativeLayout>
	        <RelativeLayout
	       	   	android:layout_width="wrap_content"
	       	   	android:layout_height="wrap_content"
	       	   	android:orientation="horizontal"
		       	>	
	            <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Current: "
	                android:textSize="20sp" />
	
	            <TextView
	                android:id="@+id/measuringCurrent"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="init"
	                android:textSize="20sp" />	            
	        </RelativeLayout>
	        <RelativeLayout
	       	   	android:layout_width="wrap_content"
	       	   	android:layout_height="wrap_content"
	       	   	android:orientation="horizontal"
		       	>	
	           <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Capacitor Value: "
	                android:textSize="20sp" />
	
	            <TextView
	                android:id="@+id/measuringCapValue"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="init"
	                android:textSize="20sp" />        
	        </RelativeLayout>
	        <RelativeLayout
	       	   	android:layout_width="wrap_content"
	       	   	android:layout_height="wrap_content"
	       	   	android:orientation="horizontal"
		       	>	
		        <TextView
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="Error Rate: "
	                android:textSize="20sp" />
	
	            <TextView
	                android:id="@+id/measuringErrorRate"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_alignParentRight="true"
	                android:text="init"
	                android:textSize="20sp" />
	        </RelativeLayout>
		</LinearLayout>
		
		<!-- Button section -->
       	<LinearLayout 
       	    android:layout_width="480dp"
       	    android:layout_height="wrap_content"
       	    android:layout_below="@+id/measuring_show"
       	    android:layout_marginTop="20dp"
       	    android:layout_centerHorizontal="true"
       	    android:orientation="vertical"
       	    android:showDividers="middle"
       	    android:divider="@drawable/empty_divider">
	        <LinearLayout
	       	   	android:layout_width="wrap_content"
	       	   	android:layout_height="wrap_content"
	       	   	android:orientation="horizontal"
	       	   	android:showDividers="middle"
       	    	android:divider="@drawable/empty_divider_horizontal"
		       	>		        
		        <Button
		            android:id="@+id/takingMeasureButton"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Take Measure" />
		        <Button
		            android:id="@+id/addCapacitor"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="Add Capacitor" />
			    <Button
			        android:id="@+id/delDB"
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:layout_below="@+id/leftCol"
			        android:text="Delete" />		        
        	 </LinearLayout>       
	    </LinearLayout> 
       		    
    </RelativeLayout><!-- end of right column -->
    </RelativeLayout>
	</ScrollView>
</RelativeLayout>
